--- a/forum.html
+++ b/forum.html
@@ -12,7 +12,8 @@
 
 <!-- Display the current vote count -->
 <p id="voteCount">Votes: 0</p>
-
+<script src="./forum.js">
+</script>
     
 </body>
 </html>
