upvote and downvote working

--- a/forum.html
+++ b/forum.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <!-- Assuming you have a button for upvote and downvote -->
-<button id="upvoteBtn">Upvote</button>
-<button id="downvoteBtn">Downvote</button>
+<button id="upvoteButton">Upvote</button>
+<button id="downvoteButton">Downvote</button>
 
 <!-- Display the current vote count -->
-<p id="voteCount">Votes: 0</p>
+<p id="voteCountDisplay">Votes: 0</p>
 <script src="./forum.js">
 </script>
     
