--- a/forum.html
+++ b/forum.html
@@ -11,7 +11,7 @@
 <button id="downvoteButton">Downvote</button>
 
 <!-- Display the current vote count -->
-<p id="voteCountDisplay">Votes: 0</p>
+<p id="voteCountDisplay"></p>
 <script src="./forum.js">
 </script>
     
