--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="./login.css">
 </head>
 <body>
+  <h1>AcadMate!</h1>
   <div class="container">
-    <h1>AcadMate</h1>
     <h2>Login</h2>
     <form>
       <label for="email">Student Email</label>
@@ -21,7 +21,7 @@
       <button type="submit">Login</button>
     </form>
     <div class="additional-links">
-      <a href="./register.html">New User</a>
+      <a href="./register.html">New User ?</a>
       <a href="#">Forgot Password</a>
     </div>
   </div>
