--- a/register.html
+++ b/register.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="./register.css" />
   </head>
   <body>
+    <h1>AcadMate!</h1>
     <div class="container">
-      <h1>Register</h1>
+      <br />
+      <h2>Register</h2>
       <form>
         <label for="name">Name</label>
         <input
@@ -86,7 +88,11 @@
 
         <button type="submit">Register</button>
       </form>
+      <div class="additional-links">
+        <a href="./login.html">Already a User ?</a>
+      </div>
     </div>
+
     <script src="./register.js"></script>
   </body>
 </html>
