register year remove branch add

--- a/register.html
+++ b/register.html
@@ -70,20 +70,26 @@
           required
         />
 
-        <label for="year">Year</label>
-        <select id="year" name="year" required>
-          <option value="">Select Year</option>
-          <option value="1">Year 1</option>
-          <option value="2">Year 2</option>
-          <option value="3">Year 3</option>
-          <option value="4">Year 4</option>
+        <label for="branch">Branch</label>
+        <select id="branch" name="branch" required>
+          <option value="">Select Branch</option>
+          <option value="1">Computers</option>
+          <option value="2">IT</option>
+          <option value="3">EXCP</option>
+          <option value="4">EXTC</option>
         </select>
 
         <label for="semester">Current Semester</label>
-        <select id="semester" name="semester" required>
+        <select id="semester" name="semester" required="">
           <option value="">Select Semester</option>
           <option value="1">Semester 1</option>
           <option value="2">Semester 2</option>
+          <option value="3">Semester 3</option>
+          <option value="4">Semester 4</option>
+          <option value="5">Semester 5</option>
+          <option value="6">Semester 6</option>
+          <option value="7">Semester 7</option>
+          <option value="8">Semester 8</option>
         </select>
 
         <button type="submit">Register</button>
