--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
   <h1>AcadMate!</h1>
   <div class="container">
     <h2>Login</h2>
-    <form>
+    <form  action="login.inc.php" method="post">
       <label for="email">Student Email</label>
       <input type="email" id="email" placeholder="Enter your email" name="email" required>
 
@@ -25,5 +25,8 @@
       <a href="#">Forgot Password</a>
     </div>
   </div>
+
+  
+
 </body>
 </html>
